Validaciones en registro, perfil, y en el crear servicios, detalles esteticos
Se agregaron validaciones en las clases anteriores, y se agregaron iconos y strings.

--- a/app/src/main/res/layout/cambiar_contra_especialista.xml
+++ b/app/src/main/res/layout/cambiar_contra_especialista.xml
@@ -47,6 +47,7 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/contrase_a_actual"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_marginStart="30dp"
@@ -79,6 +80,7 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/contrase_a_nueva"
+            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp"
             android:layout_marginStart="30dp"
@@ -112,6 +114,7 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/confirmar_contrase_a"
+            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp"
             android:layout_marginStart="30dp"
