--- a/app/src/main/res/layout/login_especialista.xml
+++ b/app/src/main/res/layout/login_especialista.xml
@@ -6,15 +6,13 @@
 
     <TextView
         android:id="@+id/LoginEspecialista"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginEnd="16dp"
         android:background="@color/header_login_specialist"
         android:gravity="center"
         android:text="@string/login_specialist_title"
         android:textColor="@color/white"
         android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +65,7 @@
             android:layout_marginStart="25dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/email_login_specialist"
+            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp" />
 
@@ -96,6 +95,7 @@
             android:layout_marginBottom="-0.5dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/password_login_specialist"
+            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp" />
 
